# propositional-logic-parser-python

./: README.md  pyproject.toml  requirements.txt
scripts/: wff_visualizer.py
src/: visualizer.py
src/plparser/modules/: visualizer.py
src/plparser/scripts/: cli.py
src/propositional_logic_parser/modules/: parser.py  visualizer.py
src/propositional_logic_parser/scripts/: cli.py
tests/: parser_test.py
