[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plparser"
version = "1.0"
authors = [
    {name = "Raphael Bonatti"},
]
description = "Parse propositional logic formulas to print formatted output and generate PNG image of the AST."
readme = {file = "README", content-type = "text/markdown"}
license = {file = "LICENSE"}
dependencies = [
    "pydot==2.0.0",
    "pytest==7.4.4",
    "textx==4.0.1",
]

[project.scripts]
plparser-cli = "plparser.scripts.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]