[tool.poetry]
name = "propositional-logic-parser"
version = "0.1.0"
description = "Parse propositional logic formulas to print formatted output and generate PNG image of the AST."
license = "Apache-2.0"
authors = ["Raphael Bonatti"]
readme = "README.md"
packages = [{include = "propositional_logic_parser", from="src"}, {include = "modules", from="src/propositional_logic_parser"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
textx = "==4.0.1"
pydot = "==2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
plparser-cli = "propositional_logic_parser.scripts.cli:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"